# d4-snap

./: .gitignore  .pre-commit-config.yaml  README.md  d4-snap.spec  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py
src/d4_snap/: cli.py  git_operations.py  main.py  menu.py  snapshot_manager.py  tools.py  ui.py
src/d4_snap/config/: d4_snap.yaml
src/tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_cli.py  test_git_operations.py  test_main.py  test_menu.py  test_simple.py  test_snapshot_manager.py  test_tools.py  test_ui.py
tests/: README_TEST.md  conftest.py  test_cli.py  test_git_operations.py  test_main.py  test_menu.py  test_simple.py  test_snapshot_manager.py  test_tools.py  test_ui.py
